Desktop/Project/jetProject/force-app/main/default/main/default/objects/Customer__c/fields/Customer_address__c.field-meta.xml
<CustomField>
    <fullName>Customer_address__c</fullName>
    <label>Customer address</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>