Desktop/Project/jetProject/force-app/main/default/main/default/objects/Customer__c/fields/Pilot_License_Number__c.field-meta.xml
<CustomField>
    <fullName>Pilot_License_Number__c</fullName>
    <label>Pilot License Number</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
</CustomField>