Desktop/Project/jetProject/force-app/main/default/main/default/objects/Customer__c/fields/Total_Flied_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Flied_Hours__c</fullName>
    <label>Total Flied Hours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>