Desktop/Project/jetProject/force-app/main/default/main/default/objects/Customer__c/fields/Your_date_of_birth__c.field-meta.xml
<CustomField>
    <fullName>Your_date_of_birth__c</fullName>
    <label>Date of birth</label>
    <required>true</required>
    <type>Date</type>
</CustomField>