Desktop/Project/jetProject/force-app/main/default/main/default/objects/Customer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Customer_address__c</columns>
    <columns>Pilot_License_Number__c</columns>
    <columns>Total_Flied_Hours__c</columns>
    <columns>Your_date_of_birth__c</columns>
    <columns>Phone_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>